--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "normalize.css": "8.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-syntax-highlighter": "^10.2.1",
     "spectacle": "^5.2.2",
     "spectacle-renderer": "^0.0.3"
   },
